@@ -2,29 +2,22 @@ package com.oniesoft.serviceimpl;
 
 
 import com.fasterxml.jackson.databind.ObjectMapper;
-
-
-import com.oniesoft.dto.TestResultDto;
-import com.oniesoft.dto.TestRunRequest;
+import com.oniesoft.dto.*;
 import com.oniesoft.exception.ResourceNotFoundException;
 import com.oniesoft.model.*;
 import com.oniesoft.repository.*;
 import com.oniesoft.service.TestRunService;
 import org.springframework.beans.factory.annotation.Autowired;
-
 import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
-
 
 import java.net.URI;
 import java.net.http.HttpClient;
 import java.net.http.HttpRequest;
 import java.net.http.HttpResponse;
 import java.time.LocalDateTime;
-
 import java.util.*;
 import java.util.stream.Collectors;
 
@@ -120,8 +113,6 @@ public class TestRunServiceImpl implements TestRunService {
         // Link each TestCase to the existing TestRun
         for (Long testCaseId : testCaseIDs) {
             TestCase testCase = testCaseRepository.findById(testCaseId).orElseThrow(() -> new ResourceNotFoundException("TestCase not found with ID: " + testCaseId));
-            ;
-
             TestRunAndCase testRunAndCase = new TestRunAndCase();
             testRunAndCase.setTestCaseName(testCase.getTestCaseName());
             testRunAndCase.setAutomationId(testCase.getAutomationId());
@@ -161,18 +152,29 @@ public class TestRunServiceImpl implements TestRunService {
     }
 
     @Override
-    public List<TestCase> getAllUnMappedTestCases(int testRunId, long projectId) {
+    public EditTestRunTestCasesDTO getAllUnMappedTestCases(int testRunId, long projectId, Pageable pageable) {
         // Get all TestCase IDs that are associated with the given testRunId
         List<String> testCaseIds = testRunAndTestCaseRepo.findTestCaseIdsByTestRunId(testRunId);
 
         // Get all TestCase entities from the repository
-        List<TestCase> testCases = testCaseRepository.findByProject_Id(projectId);
+        Page<TestCase> testCases = testCaseRepository.findByProject_Id(projectId, pageable);
 
-        // Filter the TestCase list to exclude those already associated with the testRunId
-        List<TestCase> unMappedTestCases = testCases.stream().filter(testCase -> !testCaseIds.contains(testCase.getAutomationId())).collect(Collectors.toList());
+        // Filter test cases with in a page of test run
+        List<String> caseIdsInRun = testCases.getContent().stream().map(TestCase::getAutomationId).filter(testCaseIds::contains).toList();
 
-        // Return the filtered list
-        return unMappedTestCases;
+        // Get Test cases in a page
+        List<TestCaseDTO> casesInProject = testCases.getContent().stream().map(testCase ->
+            new TestCaseDTO(testCase.getId(), testCase.getTestCaseName(), testCase.getAuthor(), testCase.getAutomationId(), testCase.getFeature(), testCase.getProject())
+        ).toList();
+        // Set pagination metadata
+        ApiResponse.PaginationMetadata pagination = new ApiResponse.PaginationMetadata(
+                testCases.getNumber(),
+                testCases.getTotalPages(),
+                testCases.getTotalElements(),
+                testCases.getSize()
+        );
+        // Return combine data of test cases in a project and test case (automation ids) added to a test run in that page
+        return new EditTestRunTestCasesDTO(casesInProject, caseIdsInRun, pagination);
     }
 
 
